adjust dbtool.sh for debian deployment